# fakeimagefinder_nanobananapro

./: .gitignore  README.md  finetune.py  finetune_nanobananapro.py  inference.py  inference_check_fulldataset.py  pyproject.toml  train_finetune_nanobananapro.py  train_midjourney_dalle_sd.py
utils/: training.py  unittests.py
